# osm-history-parser

./: .gitignore  CMakeLists.txt  Makefile  user_deletion_history.cpp  user_edit_history.cpp  user_tag_edit_history.cpp  user_uid_name_map.cpp  way_deletion_history.cpp  way_node_history.cpp
